deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lemuria
  labels:
    app.kubernetes.io/name: lemuria
    app.kubernetes.io/component: namespace
