deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lemuria
  namespace: lemuria
  labels:
    app.kubernetes.io/name: lemuria
    app.kubernetes.io/component: service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: lemuria
